# Studio-Managament

./: CMakeLists.txt
include/: Action.h  Customer.h  Studio.h  Trainer.h
src/: Action.cpp  Customer.cpp  Studio.cpp  Trainer.cpp  Workout.cpp  main.cpp
